fix: body overflow with many tasks

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -22,10 +22,10 @@
 	box-sizing: border-box;
 }
 
-/* :focus {
+:focus {
   outline: transparent;
   box-shadow: 0 0 0 2px var(--blue);
-} */
+}
 
 ::selection {
 	color: var(--gray-100);
@@ -33,6 +33,9 @@
 }
 
 body {
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 	font-family: 'Inter', sans-serif;
 	font-weight: 400;
 	font-size: 1rem;
